--- a/package.json
+++ b/package.json
@@ -1,15 +1,12 @@
 {
-  "name": "angular2-webpack-starter",
-  "version": "5.0.5",
-  "description": "An Angular 2 Webpack Starter kit featuring Angular 2 (Router, Http, Forms, Services, Tests, E2E, Coverage), Karma, Protractor, Jasmine, Istanbul, TypeScript, and Webpack by AngularClass",
+  "name": "sam-client",
+  "version": "1.0",
+  "description": "SAM Client Side Implementation",
   "keywords": [
     "angular2",
     "webpack",
     "typescript"
-  ],
-  "author": "Patrick Stapleton <patrick@angularclass.com>",
-  "homepage": "https://github.com/angularclass/angular2-webpack-starter",
-  "license": "MIT",
+  ],  
   "scripts": {
     "rimraf": "rimraf",
     "tslint": "tslint",
