--- a/package.json
+++ b/package.json
@@ -122,7 +122,7 @@
     "typedoc": "^0.4.4",
     "typescript": "2.0.0",
     "url-loader": "^0.5.7",
-    "webpack": "^2.1.0-beta.21",
+    "webpack": "2.1.0-beta.21",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-dev-server": "^2.1.0-beta.0",
     "webpack-md5-hash": "^0.0.5",
