--- a/package.json
+++ b/package.json
@@ -36,6 +36,11 @@
     "github-deploy:prod": "webpack --config config/webpack.github-deploy.js --progress --profile --github-prod",
     "server": "npm run server:dev",
     "server:dev": "webpack-dev-server --config config/webpack.dev.js --progress --profile --watch --content-base src/",
+    "server:reidev": "webpack-dev-server --config config/webpack.reidev.js --progress --profile --watch --content-base src/",
+    "server:reiuat": "webpack-dev-server --config config/webpack.reiuat.js --progress --profile --watch --content-base src/",
+    "server:comp": "webpack-dev-server --config config/webpack.comp.js --progress --profile --watch --content-base src/",
+    "server:minc": "webpack-dev-server --config config/webpack.minc.js --progress --profile --watch --content-base src/",
+    "server:local": "webpack-dev-server --config config/webpack.local.js --progress --profile --watch --content-base src/",
     "server:dev:hmr": "npm run server:dev -- --inline --hot",
     "server:prod": "http-server dist --cors",
     "webdriver:update": "npm run webdriver-manager update",
