--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "rxjs": "5.0.0-beta.6",
     "zone.js": "~0.6.17",
     "http-server": "^0.9.0",
+    "lodash": "^4.15.0",
     "samwds": "^0.2.4"
   },
   "devDependencies": {
