--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "angular2",
     "webpack",
     "typescript"
-  ],  
+  ],
   "scripts": {
     "rimraf": "rimraf",
     "tslint": "tslint",
@@ -54,7 +54,7 @@
     "postversion": "git push && git push --tags"
   },
   "dependencies": {
-    "@angular/common": "2.0.0-rc.7",
+    "@angular/common": "2.0.0",
     "@angular/compiler": "2.0.0-rc.7",
     "@angular/core": "2.0.0-rc.7",
     "@angular/forms": "^2.0.0-rc.7",
