--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "rxjs": "5.0.0-beta.6",
     "zone.js": "~0.6.17",
     "http-server": "0.9.0",
+    "envs": "^0.1.6",
     "lodash": "4.15.0",
     "samwds": "0.2.4"
   },
@@ -94,6 +95,7 @@
     "angular2-hmr": "~0.8.0",
     "angular2-template-loader": "0.5.0",
     "awesome-typescript-loader": "2.2.1",
+    "dotenv": "^2.0.0",
     "codelyzer": "~0.0.21",
     "copy-webpack-plugin": "3.0.1",
     "css-loader": "0.24.0",
