--- a/api-config.example.json
+++ b/api-config.example.json
@@ -1,4 +1,4 @@
 {
   "API_UMBRELLA_URL": "https://csp-api.sam.gov/comp",
-  "API_UMBRELLA_KEY": "API_URL_KEY_GOES_HERE"
+  "API_UMBRELLA_KEY": "API_KEY_GOES_HERE"
 }
