add a npm run test:no-lint, add webpack.local.js back to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,6 @@ npm-debug.log
 
 /nbproject/
 api-config.json
+
+# Use this configuration name to create custome webpack configurations that are ignored by git
+config/webpack.local.js
