--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "build:prod": "webpack --config config/webpack.prod.js  --progress --profile --bail",
     "server": "npm run server:dev",
     "server:dev": "webpack-dev-server --config config/webpack.dev.js --progress --profile --watch --content-base src/",
-    "server:no-watch": "webpack-dev-server --config config/webpack.dev.js --progress --profile --content-base src/",
+    "server:local": "webpack-dev-server --config config/webpack.local.js --progress --profile --watch --content-base src/",
     "server:dev:hmr": "npm run server:dev -- --inline --hot",
     "server:prod": "ws -p 8080 -d dist/ --spa index.html",
     "prod": "npm run build:prod && npm run server:prod",
@@ -44,6 +44,7 @@
     "e2e": "npm run protractor",
     "e2e:live": "npm run e2e -- --elementExplorer",
     "test": "karma start",
+    "test:no-lint": "karma start --no-lint",
     "ci": "npm run lint && npm test && npm run e2e",
     "docs": "npm run typedoc -- --options typedoc.json --exclude '**/*.spec.ts' ./src/",
     "start": "npm run server:dev",
