--- a/package.json
+++ b/package.json
@@ -50,26 +50,26 @@
     "start:hmr": "npm run server:dev:hmr"
   },
   "dependencies": {
-    "@angular/common": "2.0.0",
-    "@angular/compiler": "2.0.0",
-    "@angular/core": "2.0.0",
-    "@angular/forms": "2.0.0",
-    "@angular/http": "2.0.0",
-    "@angular/platform-browser": "2.0.0",
-    "@angular/platform-browser-dynamic": "2.0.0",
-    "@angular/platform-server": "2.0.0",
-    "@angular/router": "3.0.0",
-    "@angularclass/conventions-loader": "1.0.2",
-    "@angularclass/request-idle-callback": "1.0.7",
-    "@angularclass/webpack-toolkit": "1.3.3",
-    "core-js": "2.4.0",
+    "@angular/common": "^2.1.1",
+    "@angular/compiler": "^2.1.1",
+    "@angular/core": "^2.1.1",
+    "@angular/forms": "^2.1.1",
+    "@angular/http": "^2.1.1",
+    "@angular/platform-browser": "^2.1.1",
+    "@angular/platform-browser-dynamic": "^2.1.1",
+    "@angular/platform-server": "^2.1.1",
+    "@angular/router": "^3.1.1",
+    "@angularclass/conventions-loader": "~1.0.12",
+    "@angularclass/hmr": "~1.2.0",
+    "@angularclass/hmr-loader": "~3.0.2",
+    "core-js": "~2.4.1",
     "d3": "^4.2.6",
     "envs": "^0.1.6",
-    "ie-shim": "0.1.0",
-    "local-web-server": "1.2.6",
-    "lodash": "4.15.0",
-    "rxjs": "5.0.0-beta.12",
-    "samwds": "0.2.5",
+    "ie-shim": "~0.1.0",
+    "local-web-server": "~1.2.6",
+    "lodash": "~4.15.0",
+    "rxjs": "~5.0.0-rc.1",
+    "samwds": "^0.2.5",
     "zone.js": "~0.6.17"
   },
   "devDependencies": {
@@ -87,10 +87,10 @@
     "angular2-hmr": "~0.8.0",
     "angular2-template-loader": "0.5.0",
     "awesome-typescript-loader": "2.2.1",
-    "dotenv": "^2.0.0",
     "codelyzer": "~0.0.21",
     "copy-webpack-plugin": "3.0.1",
     "css-loader": "0.24.0",
+    "dotenv": "^2.0.0",
     "exports-loader": "0.6.3",
     "expose-loader": "0.7.1",
     "file-loader": "0.9.0",
@@ -106,7 +106,7 @@
     "karma-sourcemap-loader": "0.3.7",
     "karma-webpack": "1.8.0",
     "parse5": "1.3.2",
-    "protractor": "3.2.2",
+    "protractor": "^4.0.9",
     "raw-loader": "0.5.1",
     "remap-istanbul": "0.6.3",
     "rimraf": "2.5.2",
