--- a/package.json
+++ b/package.json
@@ -70,7 +70,8 @@
     "lodash": "4.15.0",
     "rxjs": "5.0.0-beta.12",
     "samwds": "0.2.5",
-    "zone.js": "~0.6.17"
+    "zone.js": "~0.6.17",
+    "moment": "~2.15.2"
   },
   "devDependencies": {
     "@angularclass/hmr": "1.0.1",
