--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "lodash": "4.15.0",
     "rxjs": "5.0.0-beta.12",
     "samwds": "0.2.5",
+    "uswds": "^0.13.1",
     "zone.js": "~0.6.17"
   },
   "devDependencies": {
@@ -104,11 +105,14 @@
     "karma-mocha-reporter": "2.0.0",
     "karma-sourcemap-loader": "0.3.7",
     "karma-webpack": "1.8.0",
+    "node-sass": "^3.11.1",
     "parse5": "1.3.2",
     "protractor": "^4.0.9",
-    "raw-loader": "0.5.1",
+    "raw-loader": "^0.5.1",
     "remap-istanbul": "0.6.3",
+    "resolve-url-loader": "^1.6.0",
     "rimraf": "2.5.2",
+    "sass-loader": "^4.0.2",
     "source-map-loader": "0.1.5",
     "string-replace-loader": "1.0.3",
     "style-loader": "0.13.1",
@@ -119,7 +123,7 @@
     "tslint-loader": "2.1.5",
     "typedoc": "0.4.4",
     "typescript": "2.0.0",
-    "url-loader": "0.5.7",
+    "url-loader": "^0.5.7",
     "webpack": "1.13.2",
     "webpack-dev-middleware": "1.6.1",
     "webpack-dev-server": "1.15.2",
