backend proxy setup for dev/prod modes to get around CORS issues

--- a/package.json
+++ b/package.json
@@ -35,7 +35,13 @@
     "server:dev": "webpack-dev-server --config config/webpack.dev.js --progress --profile --watch --content-base src/",
     "server:local": "webpack-dev-server --config config/webpack.local.js --progress --profile --watch --content-base src/",
     "server:dev:hmr": "npm run server:dev -- --inline --hot",
-    "server:prod": "ws -p 8080 -d dist/ --spa index.html",
+    "server:comp": "ws -p 8080 -d dist/ --spa index.html --rewrite '/api/* -> https://csp-api.sam.gov/comp/$1'",
+    "server:minc": "ws -p 8080 -d dist/ --spa index.html --rewrite '/api/* -> https://csp-api.sam.gov/minc/$1'",
+    "server:prodlike": "ws -p 8080 -d dist/ --spa index.html --rewrite '/api/* -> https://csp-api.sam.gov/prodlike/$1'",
+    "server:prod": "ws -p 8080 -d dist/ --spa index.html --rewrite '/api/* -> https://csp-api.sam.gov/prodlike/$1'",
+    "comp": "npm run build:prod && npm run server:comp",
+    "minc": "npm run build:prod && npm run server:minc",
+    "prodlike": "npm run build:prod && npm run server:prodlike",
     "prod": "npm run build:prod && npm run server:prod",
     "webdriver:update": "npm run webdriver-manager update",
     "webdriver:start": "npm run webdriver-manager start",
