--- a/package.json
+++ b/package.json
@@ -63,16 +63,17 @@
     "@angularclass/conventions-loader": "~1.0.12",
     "@angularclass/hmr": "~1.2.0",
     "@angularclass/hmr-loader": "~3.0.2",
+    "classlist-polyfill": "^1.0.3",
     "core-js": "~2.4.1",
     "d3": "^4.2.6",
     "ie-shim": "0.1.0",
     "local-web-server": "1.2.6",
     "lodash": "4.15.0",
+    "moment": "~2.15.2",
     "ng2-cookies": "^1.0.3",
     "rxjs": "5.0.0-beta.12",
     "samwds": "0.2.5",
-    "zone.js": "~0.6.17",
-    "moment": "~2.15.2"
+    "zone.js": "~0.6.17"
   },
   "devDependencies": {
     "@angularclass/hmr": "1.0.1",
