--- a/package.json
+++ b/package.json
@@ -51,15 +51,15 @@
     "start:hmr": "npm run server:dev:hmr"
   },
   "dependencies": {
-    "@angular/common": "^2.1.1",
-    "@angular/compiler": "^2.1.1",
-    "@angular/core": "^2.1.1",
-    "@angular/forms": "^2.1.1",
-    "@angular/http": "^2.1.1",
-    "@angular/platform-browser": "^2.1.1",
-    "@angular/platform-browser-dynamic": "^2.1.1",
-    "@angular/platform-server": "^2.1.1",
-    "@angular/router": "^3.1.1",
+    "@angular/common": "~2.1.1",
+    "@angular/compiler": "~2.1.1",
+    "@angular/core": "~2.1.1",
+    "@angular/forms": "~2.1.1",
+    "@angular/http": "~2.1.1",
+    "@angular/platform-browser": "~2.1.1",
+    "@angular/platform-browser-dynamic": "~2.1.1",
+    "@angular/platform-server": "~2.1.1",
+    "@angular/router": "~3.1.0",
     "@angularclass/conventions-loader": "~1.0.12",
     "@angularclass/hmr": "~1.2.0",
     "@angularclass/hmr-loader": "~3.0.2",
