--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "css-loader": "0.24.0",
     "exports-loader": "0.6.3",
     "expose-loader": "0.7.1",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "0.9.0",
     "html-webpack-plugin": "2.21.0",
     "imports-loader": "0.6.5",
@@ -113,11 +114,13 @@
     "protractor": "^4.0.9",
     "raw-loader": "^0.5.1",
     "remap-istanbul": "0.6.3",
+    "resolve-url-loader": "^1.6.0",
     "rimraf": "2.5.2",
     "sass-loader": "^4.0.2",
     "source-map-loader": "0.1.5",
     "string-replace-loader": "1.0.3",
     "style-loader": "0.13.1",
+    "svg-url-loader": "^1.1.0",
     "to-string-loader": "1.1.4",
     "ts-helpers": "1.1.1",
     "ts-node": "1.3.0",
@@ -125,6 +128,7 @@
     "tslint-loader": "2.1.5",
     "typedoc": "0.4.4",
     "typescript": "2.0.0",
+    "url-loader": "^0.5.7",
     "webpack": "1.13.2",
     "webpack-dev-middleware": "1.6.1",
     "webpack-dev-server": "1.15.2",
