--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "moment": "~2.15.2",
     "ng2-cookies": "^1.0.3",
     "rxjs": "5.0.0-beta.12",
-    "uswds": "^0.13.1",
+    "uswds": "~0.13.1",
     "zone.js": "~0.6.17"
   },
   "devDependencies": {
