--- a/package.json
+++ b/package.json
@@ -70,9 +70,12 @@
     "ie-shim": "0.1.0",
     "local-web-server": "1.2.6",
     "lodash": "4.15.0",
+    "material": "^0.1.1",
     "moment": "~2.15.2",
     "ng2-cookies": "^1.0.3",
+    "node-sass": "^3.13.1",
     "rxjs": "5.0.0-beta.12",
+    "sass-loader": "^4.0.2",
     "uswds": "~0.13.1",
     "zone.js": "~0.6.17"
   },
@@ -134,4 +137,3 @@
     "webpack-merge": "0.14.0"
   }
 }
-
