--- a/package.json
+++ b/package.json
@@ -95,6 +95,11 @@
     "angular2-hmr": "~0.8.0",
     "angular2-template-loader": "0.5.0",
     "awesome-typescript-loader": "2.2.4",
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.9",
+    "babel-polyfill": "^6.16.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-stage-0": "^6.16.0",
     "codelyzer": "~0.0.21",
     "copy-webpack-plugin": "3.0.1",
     "css-loader": "0.24.0",
