--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "filesize": "^3.3.0",
     "font-awesome": "4.6.3",
     "ie-shim": "0.1.0",
+    "js-cookie": "^2.1.3",
     "local-web-server": "1.2.6",
     "lodash": "4.15.0",
     "material": "^0.1.1",
@@ -77,6 +78,7 @@
     "node-sass": "^3.13.1",
     "rxjs": "5.0.0-beta.12",
     "sass-loader": "^4.0.2",
+    "superagent": "^3.1.0",
     "uswds": "~0.13.1",
     "zone.js": "~0.6.17"
   },
