--- a/package.json
+++ b/package.json
@@ -51,37 +51,37 @@
     "start:hmr": "npm run server:dev:hmr"
   },
   "dependencies": {
-    "@angular/common": "^2.1.1",
-    "@angular/compiler": "^2.1.1",
-    "@angular/core": "^2.1.1",
-    "@angular/forms": "^2.1.1",
-    "@angular/http": "^2.1.1",
-    "@angular/platform-browser": "^2.1.1",
-    "@angular/platform-browser-dynamic": "^2.1.1",
-    "@angular/platform-server": "^2.1.1",
-    "@angular/router": "^3.1.1",
-    "@angularclass/conventions-loader": "~1.0.12",
-    "@angularclass/hmr": "~1.2.0",
-    "@angularclass/hmr-loader": "~3.0.2",
-    "classlist-polyfill": "^1.0.3",
-    "core-js": "~2.4.1",
-    "d3": "^4.2.6",
-    "filesize": "^3.3.0",
+    "@angular/common": "2.4.1",
+    "@angular/compiler": "2.4.1",
+    "@angular/core": "2.4.1",
+    "@angular/forms": "2.4.1",
+    "@angular/http": "2.4.1",
+    "@angular/platform-browser": "2.4.1",
+    "@angular/platform-browser-dynamic": "2.4.1",
+    "@angular/platform-server": "2.4.1",
+    "@angular/router": "3.4.1",
+    "@angularclass/conventions-loader": "1.0.12",
+    "@angularclass/hmr": "1.2.2",
+    "@angularclass/hmr-loader": "1.0.1",
+    "classlist-polyfill": "1.0.3",
+    "core-js": "2.4.1",
+    "d3": "4.4.0",
+    "filesize": "3.3.0",
     "font-awesome": "4.6.3",
     "ie-shim": "0.1.0",
     "local-web-server": "1.2.6",
     "lodash": "4.15.0",
-    "material": "^0.1.1",
-    "moment": "~2.15.2",
-    "ng2-cookies": "^1.0.3",
-    "node-sass": "^3.13.1",
-    "rxjs": "5.0.0-beta.12",
-    "sass-loader": "^4.0.2",
-    "uswds": "~0.13.1",
-    "zone.js": "~0.6.17"
+    "material": "0.1.1",
+    "moment": "2.15.2",
+    "ng2-cookies": "1.0.4",
+    "node-sass": "3.13.1",
+    "rxjs": "5.0.2",
+    "sass-loader": "4.1.1",
+    "uswds": "0.13.3",
+    "zone.js": "0.7.4"
   },
   "devDependencies": {
-    "@angularclass/hmr": "1.0.1",
+    "@angularclass/hmr": "1.2.2",
     "@angularclass/hmr-loader": "1.0.1",
     "@types/core-js": "0.9.28",
     "@types/hammerjs": "2.0.28",
@@ -92,15 +92,15 @@
     "@types/source-map": "0.1.26",
     "@types/uglify-js": "2.0.27",
     "@types/webpack": "1.12.29",
-    "angular2-hmr": "~0.8.0",
+    "angular2-hmr": "0.8.1",
     "angular2-template-loader": "0.5.0",
     "awesome-typescript-loader": "2.2.4",
-    "codelyzer": "~0.0.21",
+    "codelyzer": "0.0.28",
     "copy-webpack-plugin": "3.0.1",
     "css-loader": "0.24.0",
     "exports-loader": "0.6.3",
     "expose-loader": "0.7.1",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.9.0",
     "html-webpack-plugin": "2.21.0",
     "imports-loader": "0.6.5",
@@ -113,13 +113,13 @@
     "karma-mocha-reporter": "2.0.0",
     "karma-sourcemap-loader": "0.3.7",
     "karma-webpack": "1.8.0",
-    "node-sass": "^3.11.1",
+    "node-sass": "3.13.1",
     "parse5": "1.3.2",
-    "protractor": "^4.0.9",
-    "raw-loader": "^0.5.1",
+    "protractor": "4.0.14",
+    "raw-loader": "0.5.1",
     "remap-istanbul": "0.6.3",
     "rimraf": "2.5.2",
-    "sass-loader": "^4.0.2",
+    "sass-loader": "4.1.1",
     "source-map-loader": "0.1.5",
     "string-replace-loader": "1.0.3",
     "style-loader": "0.13.1",
@@ -130,7 +130,7 @@
     "tslint-loader": "2.1.5",
     "typedoc": "0.4.4",
     "typescript": "2.0.10",
-    "url-loader": "^0.5.7",
+    "url-loader": "0.5.7",
     "webpack": "1.13.2",
     "webpack-dev-middleware": "1.6.1",
     "webpack-dev-server": "1.15.2",
