--- a/package.json
+++ b/package.json
@@ -113,15 +113,17 @@
     "imports-loader": "0.6.5",
     "istanbul-instrumenter-loader": "0.2.0",
     "json-loader": "0.5.4",
-    "karma": "0.13.22",
+    "karma": "^0.13.22",
     "karma-chrome-launcher": "2.0.0 ",
     "karma-coverage": "1.0.0",
-    "karma-jasmine": "1.0.2",
+    "karma-jasmine": "^1.0.2",
     "karma-mocha-reporter": "2.0.0",
+    "karma-phantomjs-launcher": "1.0.2",
     "karma-sourcemap-loader": "0.3.7",
     "karma-webpack": "1.8.0",
     "node-sass": "^3.11.1",
     "parse5": "1.3.2",
+    "phantomjs-prebuilt": "^2.1.14",
     "protractor": "^4.0.9",
     "raw-loader": "^0.5.1",
     "remap-istanbul": "0.6.3",
