--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "filesize": "^3.3.0",
     "font-awesome": "4.6.3",
     "ie-shim": "0.1.0",
+    "intl": "^1.2.5",
     "js-cookie": "^2.1.3",
     "local-web-server": "1.2.6",
     "lodash": "4.15.0",
