--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "src/sam-ui-elements"]
 	path = src/sam-ui-elements
-	url = https://justinlbabbs:be632d07717cb69a47bc805a6b9c3e65b991a726@csp-github.sam.gov/GSA-IAE/sam-ui-elements.git
+	url = https://csp-github.sam.gov/GSA-IAE/sam-ui-elements.git
 	branch = develop
