--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "lodash": "4.15.0",
     "moment": "~2.15.2",
     "ng2-cookies": "^1.0.3",
+    "ng2-page-scroll": "4.0.0-beta.4",
     "rxjs": "5.0.1",
     "superagent": "^3.1.0",
     "uswds": "~0.13.1",
