--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "strictNullChecks": false,
     "baseUrl": "./src",
     "paths": {
-      "samUIKit/*": ["sam-ui-elements/src/ui-kit/*"]
+      "sam-ui-kit/*": ["sam-ui-elements/src/ui-kit/*"]
     },
     "lib": [
       "dom",
