Adding aws-sdk npm module as a dependancy in the package.json file
Adding the aws-sdk (V2.20.0) npm module in the package.json file, as it
is required to access S3 buckets from the frontend.
This is required for the reporting app to download static reports stored
on an S3 bucket

--- a/package.json
+++ b/package.json
@@ -79,7 +79,8 @@
     "rxjs": "5.0.1",
     "superagent": "^3.1.0",
     "uswds": "~0.13.1",
-    "zone.js": "0.7.2"
+    "zone.js": "0.7.2",
+	"aws-sdk": "2.20.0"
   },
   "devDependencies": {
     "@angularclass/hmr": "1.2.2",
