--- a/package.json
+++ b/package.json
@@ -65,9 +65,9 @@
     "@angularclass/hmr-loader": "1.0.1",
     "classlist-polyfill": "1.0.3",
     "core-js": "2.4.1",
-    "d3": "^4.2.6",
-    "diff-match-patch": "^1.0.0",
-    "filesize": "^3.3.0",
+    "d3": "4.7.3",
+    "diff-match-patch": "1.0.0",
+    "filesize": "3.5.6",
     "font-awesome": "4.6.3",
     "ie-shim": "0.1.0",
     "intl": "^1.2.5",
@@ -75,7 +75,7 @@
     "local-web-server": "1.2.6",
     "lodash": "4.15.0",
     "moment": "~2.15.2",
-    "ng2-cookies": "^1.0.3",
+    "ng2-cookies": "1.0.6",
     "ng2-page-scroll": "4.0.0-beta.4",
     "rxjs": "5.0.1",
     "superagent": "^3.1.0",
