--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@angularclass/conventions-loader": "1.0.12",
     "@angularclass/hmr": "1.2.2",
     "@angularclass/hmr-loader": "1.0.1",
+    "angular2-uuid": "^1.1.1",
     "aws-sdk": "2.20.0",
     "classlist-polyfill": "1.0.3",
     "core-js": "2.4.1",
