--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@angularclass/conventions-loader": "1.0.12",
     "@angularclass/hmr": "1.2.2",
     "@angularclass/hmr-loader": "1.0.1",
+    "@types/moment-timezone": "^0.2.34",
     "angular2-uuid": "^1.1.1",
     "aws-sdk": "2.20.0",
     "classlist-polyfill": "1.0.3",
@@ -77,6 +78,7 @@
     "local-web-server": "1.2.6",
     "lodash": "4.15.0",
     "moment": "~2.15.2",
+    "moment-timezone": "^0.5.13",
     "ng2-cookies": "1.0.6",
     "ng2-page-scroll": "4.0.0-beta.4",
     "rxjs": "5.0.1",
