ignore the api-config file

--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,7 @@ npm-debug.log
 *.iml
 
 /nbproject/
+api-config.json
 
 # Use this configuration name to create custome webpack configurations that are ignored by git
 config/webpack.local.js
