git submodule point to csp

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,6 @@
 [submodule "src/sam-ui-elements"]
-	path = src/sam-ui-elements
-	url = git@github.helix.gsa.gov:GSA-IAE-APPS/sam-ui-elements.git
-	branch = main
+  path = src/sam-ui-elements
+  url = git@csp-github.sam.gov:GSA-IAE/sam-ui-elements.git
+  branch = main
+
 
