--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "e2e:live": "npm run e2e -- --elementExplorer",
     "test": "karma start",
     "test:no-lint": "karma start --no-lint",
+    "test:sam-ui-elements": "karma start config/karma.sam-ui-elements.conf.js --no-lint",
     "ci": "npm run lint && npm test && npm run e2e",
     "docs": "npm run typedoc -- --options typedoc.json --exclude '**/*.spec.ts' ./src/",
     "start": "npm run server:dev",
